--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.cloudops</groupId>
     <artifactId>cloudmc-plugin-starter</artifactId>
-    <version>23.0.0-SNAPSHOT</version>
+    <version>24.0.1</version>
   </parent>
   <artifactId>cloudmc-todoist-plugin</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -33,8 +33,8 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.1</version>
-      <scope>compile</scope>
+      <version>2.8.5</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
