--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,12 @@
     <repository>
       <id>release</id>
       <name>Releases CloudOps Repository</name>
-      <url>http://nexus.cloudops-devteam.com/repository/libs-release-local</url>
+      <url>https://nexus.cloudops-devteam.com/repository/libs-release-local</url>
     </repository>
     <snapshotRepository>
       <id>snapshots</id>
       <name>Snapshots CloudOps Repository</name>
-      <url>http://nexus.cloudops-devteam.com/repository/libs-snapshot-local</url>
+      <url>https://nexus.cloudops-devteam.com/repository/libs-snapshot-local</url>
     </snapshotRepository>
   </distributionManagement>
 </project>
