--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.cloudops</groupId>
     <artifactId>cloudmc-plugin-starter</artifactId>
-    <version>45.11.0-SNAPSHOT</version>
+    <version>42.0.2</version>
   </parent>
   <artifactId>cloudmc-todoist-plugin</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -23,6 +23,12 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
       <version>4.5.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
