Todolist plugin added

--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.cloudops</groupId>
     <artifactId>cloudmc-plugin-starter</artifactId>
     <version>45.25.0</version>
   </parent>
-  <artifactId>cloudmc-todoist-plugin</artifactId>
+  <artifactId>cloudmc-todolist-plugin</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <properties>
-    <cloudmc.buildName>cloudmc-todoist-plugin</cloudmc.buildName>
+    <cloudmc.buildName>cloudmc-todolist-plugin</cloudmc.buildName>
+    <!--Includes the following properties from the parent POM (can be overridden)-->
+    <!-- - create.sources.jar:set to `true`-->
+    <!--    + Property used by the maven-shade-plugin in the deploy profile to build fat jar -->
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.13</version>
+      <version>4.5.5</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -27,23 +32,39 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.10</version>
+      <version>2.8.1</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.4.16</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
   <build>
     <finalName>${cloudmc.buildName}</finalName>
+    <plugins>
+      <!--Includes the following plugins from the parent POM-->
+      <!-- - org.apache.maven.plugins:maven-surefire-plugin:2.19 -->
+      <!-- - org.codehaus.gmavenplus:gmavenplus-plugin:1.5 -->
+      <!-- - org.jacoco:jacoco-maven-plugin:0.8.4 -->
+      <!-- - org.apache.maven.plugins:maven-compiler-plugin:3.3 -->
+    </plugins>
   </build>
-  <distributionManagement>
+  <profiles>
+    <!--Includes the 'plugin-dev' profile from the parent pom-->
+    <!-- - This profile includes the import for [CMC-Core] com.cloudops:cloudmc-dev -->
+    <!-- - It is re-included here so the IDE's maven plugin will automatically recognize it -->
+    <profile>
+      <id>plugin-dev</id>
+    </profile>
+  </profiles>
+  <repositories>
     <repository>
-      <id>release</id>
-      <name>Releases CloudOps Repository</name>
-      <url>https://nexus.cloudops-devteam.com/repository/libs-release-local</url>
+      <id>cloudmc-public</id>
+      <name>Public Releases CloudOps Repository</name>
+      <url>https://nexus.cloudops-devteam.com/repository/public-releases</url>
     </repository>
-    <snapshotRepository>
-      <id>snapshots</id>
-      <name>Snapshots CloudOps Repository</name>
-      <url>https://nexus.cloudops-devteam.com/repository/libs-snapshot-local</url>
-    </snapshotRepository>
-  </distributionManagement>
+  </repositories>
 </project>
